Added google script url

--- a/index.html
+++ b/index.html
@@ -448,9 +448,9 @@
     </div>
 
     <script>
-        // Configuration - Replace with your Google Apps Script Web App URL
+        // Configuration - Updated with your Google Apps Script Web App URL
         const CONFIG = {
-            SCRIPT_URL: 'YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL_HERE', // Replace this!
+            SCRIPT_URL: 'https://script.google.com/macros/s/AKfycbwGfGoyL-RG-B8a7VvpBI35Gglsq7HFkiS3szk_lOtO0O7diJxVchDOEnzu0jwy2-88JA/exec', // Your script URL
             GOALS: {
                 calories: 2000,
                 protein: 150,
