--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         // ============================================
         // CONFIGURATION - UPDATE THIS WITH YOUR API URL
         // ============================================
-        const https://script.google.com/macros/s/AKfycbys-E-WzrjYm5pcgLr9ghLU3U1if2iMVb_5gfDzW38Uqh_NyZyhPZNTWTMI0-LVHbqJMA/exec = 'YOUR_APPS_SCRIPT_WEB_APP_URL_HERE'; // e.g., 'https://script.google.com/macros/s/AKfycby.../exec'
+        const API_BASE_URL = 'https://script.google.com/macros/s/AKfycbys-E-WzrjYm5pcgLr9ghLU3U1if2iMVb_5gfDzW38Uqh_NyZyhPZNTWTMI0-LVHbqJMA/exec'; 
         
         // ============================================
         // API HELPER FUNCTIONS
